# secret-blox-dll

./: .gitignore  CMakeLists.txt  RCa28168  README.md  TODO.md  offsets  rpb-module.vcxproj  secret.sln  version.rc.in
.github/workflows/: build.yml
Asm/: detour.asm
Internal/include/: framework.hpp  offsets.hpp
Internal/include/Execution/: scheduler.hpp
Internal/include/Internal/: detour.hpp  exchandler.hpp  execution.hpp  logger.hpp  memory.hpp  security.h  security.hpp  test.hpp  utils.hpp  websocket.hpp
Internal/include/Rbx/: taskscheduler.hpp
Internal/src/: detour.cpp  entry.cpp  exchandler.cpp  execution.cpp  logger.cpp  memory.cpp  scheduler.cpp  test.cpp  utils.cpp  websocket.cpp
Internal/src/Execution/: execution.cpp  scheduler.cpp
Internal/src/Rbx/: scriptcontext.cpp  taskscheduler.cpp
Luau/: CMakeLists.txt  Sources.cmake
Luau/VM/include/: lsecurity.hpp  lua.h  luaconf.h
Luau/VM/src/: lgcdebug.cpp  lobject.cpp  lobject.h  lstate.h  ltable.cpp  ltm.cpp  ltm.h
Rbx/include/Rbx/: api.hpp  instance.hpp  scriptcontext.hpp  taskscheduler.hpp
Rbx/src/: api.cpp  instance.cpp  rapi.cpp  scriptcontext.cpp  taskscheduler.cpp
Scripts/: test.lua
Security/: README.md
Security/include/Security/: security.hpp  xor.hpp
Security/src/: security.cpp
core_dll/: core_dll.vcxproj  core_dll.vcxproj.filters  dllmain.cpp
core_dll/offsets/: address.cpp  address.h  functions.h
dependencies/luau/common/include/Luau/: Bytecode.h
dependencies/luau/vm/include/: lua.h  luaconf.h
dependencies/luau/vm/src/: lgcdebug.cpp  lobject.h  ltable.h
rpb_old/: README.md  rpb-module.vcxproj  rpb-module.vcxproj.filters
rpb_old/dependencies/luau/vm/src/: lapi.cpp  ltable.cpp  lvmexecute.cpp
rpb_old/src/: source.cpp
rpb_old/src/roblox/exploit/classes/pipe/: pipe.h
rpb_old/src/roblox/exploit/scheduler/: scheduler.h
rpb_old/src/roblox/miscellaneous/storage/: storage.cpp
rpb_old/src/utilities/: padding.h
rpb_old/src/utilities/utils/: utils.h
sb_utils/: framework.h  sb_utils.vcxproj  sb_utils.vcxproj.filters
sb_utils/include/sb_utils/: mem.h  offsets.h  random.h
sb_utils/include/sb_utils/rbx/: api.cpp  api.h  taskscheduler.h
sb_utils/src/: memory.cpp  utils.cpp
sb_utils/src/rbx/: api.cpp  taskscheduler.cpp
src/: main.cpp
src/roblox/exploit/classes/pipe/: pipe.cpp
src/roblox/exploit/execution/: execution.cpp  execution.h
src/roblox/exploit/scheduler/: scheduler.cpp
src/roblox/miscellaneous/: configuration.hpp
src/roblox/miscellaneous/offsets/: addresses.h  offsets.h
src/roblox/miscellaneous/storage/: storage.h
src/roblox/security/: winreg.h
src/roblox/security/obfuscation/: string.h
src/utilities/utils/: utils.cpp
test_dll/: dllmain.cpp  framework.h  test_dll.vcxproj  test_dll.vcxproj.filters
x64/Release/: build.dll.recipe  build.ipdb  rpb-module.dll.recipe  x64-module.dll.recipe
x64/Release/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
x64/Release/rpb-module.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rpb-module.lastbuildstate
